--- a/P010390.opf/layers/v001/Pagination.yml
+++ b/P010390.opf/layers/v001/Pagination.yml
@@ -1,5 +1,5 @@
 id: a81da451deeb44fdbdb8651bd9d1b8de
-annotation_type: pagination
+annotation_type: Pagination
 revision: '00001'
 annotations:
   e6622becac20477dae517bba367f9a37:
